refactoring to make all lables and messages consistent

--- a/src/savelifecyclerecordsplugin/SaveLifecycleRecordsPluginProperties.properties
+++ b/src/savelifecyclerecordsplugin/SaveLifecycleRecordsPluginProperties.properties
@@ -1,7 +1,7 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-DurationPluginProperties.Description.label=Duration Plugin Description
-DurationPluginProperties.Name.label=DurationPlugin
-DurationPluginProperties.ShortName.label=Duration Plugin Short Name
-DurationPluginProperties.label=Duration Plugin Alternative
+SaveLifecycleRecordsPluginProperties.Description.label=Save Lifecycle Records Plugin Description
+SaveLifecycleRecordsPluginProperties.Name.label=SaveLifecycleRecordsPlugin
+SaveLifecycleRecordsPluginProperties.ShortName.label=Save Lifecycle Records Plugin Short Name
+SaveLifecycleRecordsPluginProperties.label=Save Lifecycle Records Plugin Alternative
